--- a/Reports/ExtentReports/Spark.html
+++ b/Reports/ExtentReports/Spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">XYZ_Bank_Automation_Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Nov 21, 2024 10:39:03 AM</span></a>
+<a href="#"><span class="badge badge-primary">Nov 21, 2024 02:30:31 PM</span></a>
 </li>
 </ul>
 </div>
@@ -67,6 +67,7 @@
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-exclamation-circle"></i></a>
 <ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
 <a class="dropdown-item" status="pass" href="#"><span>Pass</span><span class="status success"></span></a>
+<a class="dropdown-item" status="fail" href="#"><span>Fail</span><span class="status danger"></span></a>
 <div class="dropdown-divider"></div>
 <a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 </ul>
@@ -81,7 +82,7 @@
           <div class="test-detail">
             <p class="name">Login Page Feature</p>
             <p class="text-sm">
-              <span>10:39:06 AM</span> / <span>00:00:56:945</span>
+              <span>2:30:33 PM</span> / <span>00:00:00:170</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +91,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Login Page Feature</h5>
-<span class='badge badge-success'>11.21.2024 10:39:06 AM</span>
-<span class='badge badge-danger'>11.21.2024 10:40:03 AM</span>
-<span class='badge badge-default'>00:00:56:945</span>
+<span class='badge badge-success'>11.21.2024 2:30:33 PM</span>
+<span class='badge badge-danger'>11.21.2024 2:30:33 PM</span>
+<span class='badge badge-default'>00:00:00:170</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -162,25 +163,25 @@
 </div>
           </div>
         </li>
-        <li class="test-item"  status="pass" test-id="17"
+        <li class="test-item"  status="fail" test-id="17"
           author=""
           tag=""
           device="">
           <div class="test-detail">
             <p class="name">Manager Page Feature</p>
             <p class="text-sm">
-              <span>10:40:03 AM</span> / <span>00:00:18:461</span>
-              <span class="badge pass-bg log float-right">Pass</span>
+              <span>2:30:33 PM</span> / <span>00:00:00:158</span>
+              <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
           <div class="test-contents d-none">
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">Manager Page Feature</h5>
-<span class='badge badge-success'>11.21.2024 10:40:03 AM</span>
-<span class='badge badge-danger'>11.21.2024 10:40:22 AM</span>
-<span class='badge badge-default'>00:00:18:461</span>
+<h5 class="test-status text-fail">Manager Page Feature</h5>
+<span class='badge badge-success'>11.21.2024 2:30:33 PM</span>
+<span class='badge badge-danger'>11.21.2024 2:30:33 PM</span>
+<span class='badge badge-default'>00:00:00:158</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=17</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -216,6 +217,47 @@
           </div>
         </div>
   </div>
+  <div class="card">
+    <div class="card-header" role="tab">
+      <div class="card-title">
+        <div class="node" id="25"><span class="badge log fail-bg mr-2">Fail</span>Verify Create Customer Fields</div>
+      </div>
+    </div>
+        <div class="">
+          <div class="card-body">
+              <div class="step pass-bg" title="org.stepDefination.LoginStepDef.user_is_on_login_page()">
+                <span>Given User is on Login Page</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="org.stepDefination.ManagerStepDef.user_click_on_Manager_button()">
+                <span>When User click on Manager button</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="org.stepDefination.ManagerStepDef.click_on_add_Customer()">
+                <span>When Click on Add Customer</span>
+      <div>
+      </div>
+              </div>
+              <div class="step fail-bg" >
+                <span>Then First Name Field is Displayed</span>
+      <div>Step undefined
+      </div>
+              </div>
+              <div class="step skip-bg" >
+                <span>And Last Name Field is Displayed</span>
+      <div>Step skipped
+      </div>
+              </div>
+              <div class="step skip-bg" >
+                <span>And Postal Code Field is Displayed</span>
+      <div>Step skipped
+      </div>
+              </div>
+          </div>
+        </div>
+  </div>
 </div>
           </div>
         </li>
@@ -233,25 +275,25 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Nov 21, 2024 10:39:03 AM</h3>
+<h3>Nov 21, 2024 02:30:31 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Nov 21, 2024 10:40:22 AM</h3>
+<h3>Nov 21, 2024 02:30:33 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-pass">Features Passed</p>
-<h3>2</h3>
+<h3>1</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-fail">Features Failed</p>
-<h3>0</h3>
+<h3>1</h3>
 </div></div>
 </div>
 </div>
@@ -267,12 +309,12 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'>
-<b>2</b> features passed
+<div><small data-tooltip='50%'>
+<b>1</b> features passed
 </small>
 </div>
 <div>
-<small data-tooltip='0%'><b>0</b> features failed,
+<small data-tooltip='50%'><b>1</b> features failed,
 <b>0</b> skipped, <b data-tooltip='0%'>0</b> others
 </small>
 </div>
@@ -290,9 +332,9 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>3</b> scenarios passed</small></div>
+<div><small data-tooltip='75%'><b>3</b> scenarios passed</small></div>
 <div>
-<small data-tooltip='0%'><b>0</b> scenarios failed,
+<small data-tooltip='25%'><b>1</b> scenarios failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
@@ -310,10 +352,10 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>10</b> steps passed</small></div>
+<div><small data-tooltip='81%'><b>13</b> steps passed</small></div>
 <div>
-<small data-tooltip='0%'><b>0</b> steps failed,
-<b>0</b> skipped, <b data-tooltip='%'>0</b> others
+<small data-tooltip='6%'><b>1</b> steps failed,
+<b>2</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
 </div>
@@ -329,7 +371,7 @@
 </div></div>
 <script>
 var timeline = {
-"Login Page Feature":56.945,"Manager Page Feature":18.461
+"Login Page Feature":0.17,"Manager Page Feature":0.158
 };
 </script>
 <div class="row">
@@ -364,21 +406,21 @@ var timeline = {
 <script>
 var statusGroup = {
 parentCount: 5,
-passParent: 2,
-failParent: 0,
+passParent: 1,
+failParent: 1,
 warningParent: 0,
 skipParent: 0,
 childCount: 5,
 passChild: 3,
-failChild: 0,
+failChild: 1,
 warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 10,
-failGrandChild: 0,
+passGrandChild: 13,
+failGrandChild: 1,
 warningGrandChild: 0,
-skipGrandChild: 0,
+skipGrandChild: 2,
 infoGrandChild: 0,
 eventsCount: 5,
 };
